# PIF

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Commande_git.md  LICENSE  ListTopic.md  README.md  Test  bidul.text  cleanDepot.sh  commit_test.txt  commitmsg.txt  gourceviseo.sh  mon_chaton  requirement.txt  requirements.txt  test.bob  test.txt  test_pierre.txt  tom
Aspi/Gestion_aspi/: Gestion_aspi.ino
GPS/: README.md  Zone.cpp  cartesien_vers_gps.cpp  centre_quadrilatere.cpp  point_dans_quadrilatere.cpp  zone.hpp  zone.py
GPS/bno/: platformio.ini
GPS/bno/src/: main.cpp
Integration/repeat_cmd/: CMakeLists.txt  package.xml
Integration/repeat_cmd/src/: repeat_cmd_node.cpp
VISION/DETECTION/ImRes/: Amx30Cote.pgm  LennaHeadBruitGauss.pgm  LennaHeadBruitMedian.pgm
VISION/DETECTION/Image/: CircuitNoise.ppm  LenaHeadBruit.ppm  LennaHeadBruit.pgm
VISION/DETECTION/Vision_bouchon/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VISION/DETECTION/Vision_bouchon/src/: CVVidHoughCircle.cpp  CVVidInRangeBlobHSV.cpp  InRangeBlobHSV.cpp  Test_Opencv.cpp  myfunctions.hpp
VISION/DETECTION/devel/: .catkin
VISION/DETECTION/src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.VisionC  CTestConfiguration.ini  DisplayImage  InitScript.cpp  Makefile  VisionC  VisionC.cpp  VisionVideo  VisionVideo.cpp  VisionVideoSat  VisionVideoSat.cpp  Vision_Median.cpp  Vision_mean.cpp  Vision_test.py  cmake_install.cmake  test_bouchon  test_split.cpp
VISION/DETECTION/src/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
VISION/DETECTION/src/catkin_generated/: generate_cached_setup.py  setup_cached.sh
VISION/DETECTION/src/devel/: .catkin  .rosinstall
VISION/ENVI/: README.md  launch.txt
VISION/ENVI/detection_obstacle_noir_blanc/: Makefile  obstacle.cpp
VISION/ENVI/detection_sol/: CMakeLists.txt  Makefile  video.cpp  video1.cpp  video2  video2.cpp  vision.cpp  vision_pixel_par_pixel
VISION/ENVI/detection_sol/video3/: CMakeLists.txt  video3  video3.cpp
VISION/ENVI/detection_sol/video4/: test.cpp
VISION/ENVI/scan_detect_obstacle/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
VISION/ENVI/scan_fade/: CMakeLists.txt  package.xml
VISION/ENVI/scan_fade/src/: scan_fade.cpp
VISION/ENVI/src/: CMakeCache.txt  CMakeLists.txt  Environnement  InitScript  InitScript.cpp  InitScript.cpp.save  Makefile  cmake_install.cmake  oldInitScript.cpp  video1.cpp  vision_pixel_par_pixel
VISION/ENVI/src/Just_In_Case/: CMakeLists.txt  InitScript  InitScript.cpp  test.py
VISION/ENVI/src/traitement de surface/: Makefile  vision  vision.cpp
VISION/LABEL/: CAPSULE_MIEGOT.ino
VISION/LABEL/CAPSULE_MIEGOT/: CAPSULE_MIEGOT.ino  ax12.ino
VISION/LABEL/waste_labeling/: .gitignore  platformio.ini
VISION/NLinuxEdEnviTI/Image/: BureauBruit.pgm  PavinRealNB.pgm  Route1.ppm
VISION/NLinuxEdEnviTI/src/: CMakeCache.txt  CMakeLists.txt  Compile.sh  DisplayImage  EdClassicThr.c  EdGaussFiltring.c  EdLibClassicThr.c  EdLibClassicThr.h  EdLibGaussFiltring.c  EdLibGaussFiltring.h  EdLibMeanFiltring.c  EdLibMeanFiltring.h  EdLibMedianFiltring.c  EdLibMedianFiltring.h  EdLibScanVois3.c  EdLibScanVois3.h  EdLibSimpleScan.c  EdLibSimpleScan.h  EdMeanFiltring.c  EdMedianFiltring.c  EdScanVois3.c  EdSimpleScan.c  EdStructures.h  EdUtilities.c  InitScript.cpp  Makefile  cmake_install.cmake
WEB/: Client_video.py  How_To.md  README.md  cert.pem  client_rosbridge.py  client_video.py  code_serveur_pif.py  creat_env.sh  handle_request.py  lib_topic.py  location.py  requirement.txt  requirements.txt  setup.old.sh  setup.sh
WEB/config/: config.json  toto_config.json
WEB/key/: key.pem
WEB/static/: aspiration.html  controle-vehicule.html  rosbridge.js  text.css
WEB/static/config/: serv_config.json
WEB/static/src/: aspi.js  configuration.js  controle.js  zone.js
WEB/static/style/: configuration.css  controle.css  index.css
WEB/templates/: aspiration.html  configuration.html  controle.html  gps.html  index.html  rosbridge.html  serveur_web.html  test.html  vision.html
catkin_ws/: L_node.launch  go_to_simu.launch  roslaunch_node.launch
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/: .rosinstall  setup.sh
catkin_ws/src/: CTestConfiguration.ini  run.txt
catkin_ws/src/Wall-E_behaviors/: README.md
catkin_ws/src/atomic_configure/: _setup_util.py
catkin_ws/src/coord_gps/: CMakeLists.txt  package.xml  requirements.txt
catkin_ws/src/coord_gps/launch/: coord_gps.launch
catkin_ws/src/coord_gps/src/: coord_gps_node.cpp  coord_gps_node.hpp  coord_gps_node.py  zone_creation.cpp  zone_creation.hpp  zone_verification.cpp  zone_verification.hpp
catkin_ws/src/detect_waste/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.old  CTestConfiguration.ini  package.xml
catkin_ws/src/detect_waste/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/detect_waste/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/src/detect_waste/devel/lib/detect_waste/: detect_waste_node
catkin_ws/src/detect_waste/devel/lib/pkgconfig/: detect_waste.pc
catkin_ws/src/detect_waste/devel/share/detect_waste/cmake/: detect_wasteConfig.cmake
catkin_ws/src/detect_waste/src/: CMakeLists.txt  Video_Sender.hpp  VisionVideoSat  VisionVideoSat.cpp  detect_waste.cpp  detect_waste.hpp  detect_waste_node.cpp  obstacle_detection_node.cpp
catkin_ws/src/devel/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/go_to/: CMakeLists.old.txt  CMakeLists.txt  package.xml
catkin_ws/src/gps_rtk/: CMakeLists.txt  package.xml
catkin_ws/src/gps_transform/: CMakeLists.txt  package.xml
catkin_ws/src/obstacle_detect/: CMakeLists.txt  package.xml
catkin_ws/src/obstacle_detect/src/: obstacle_detect_node.cpp
catkin_ws/src/obstacle_detection/: CMakeLists.txt  package.xml
catkin_ws/src/path_finding/: CMakeLists.txt  package.xml
catkin_ws/src/pif_go_to/: CMakeLists.txt
catkin_ws/src/test/src/: CMakeLists.txt  test.cpp
len(cher)/: magneto.ino
ros_catkin_ws/: README.md
(+331 files in other folders)
